cambio de colores en tema cennti

--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,1 +1,1 @@
-<img src="static/images/cennti.png" alt="CENNTI Cloud" width="500" height="600">
+<img src="/images/cennti.png" alt="CENNTI Cloud" >
